--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 django==2.1.5
 psycopg2==2.7.6.1
-psycopg2-binary=2.8.3
+psycopg2-binary==2.8.3
 djangorestframework==3.9.2
 whitenoise==4.1.2
 gunicorn==19.9.0
